<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Earthquake Observer</string>

    <!-- Title for the settings activity -->
    <string name="Settings">Settings</string>

    <!-- Default text to show with the earthquake location ("Near the Pacific-Antarctic Ridge")
         if no specific kilometer distance from the primary location is given [CHAR LIMIT=30] -->
    <string name="near_the">Near the</string>

    <!-- Strings For Preference Headers -->
    <string name="settings_category_limits">Limits</string>
    <string name="settings_category_order">Order</string>
    <string name="settings_category_magnitude">Magnitude</string>

    <!-- Strings For Enable Date Filter Preference [CHAR LIMIT=30] -->
    <string name="settings_enable_date_filter_label">Enable Date Filters</string>
    <string name="settings_enable_date_filter_key" translatable="false">enable_date_filters</string>
    <string name="settings_enable_date_filter_default" translatable="false">false</string>

    <!-- Strings For Date Preference [CHAR LIMIT=30] -->
    <string name="settings_from_date_label">From Date</string>
    <string name="settings_from_date_key" translatable="false">from_date</string>
    <string name="settings_from_date_default" translatable="false">0</string>

    <!-- Strings For Date Preference [CHAR LIMIT=30] -->
    <string name="settings_to_date_label">To Date</string>
    <string name="settings_to_date_key" translatable="false">to_date</string>
    <string name="settings_to_date_default" translatable="false">0</string>

    <!-- Strings For Item Limit Preference [CHAR LIMIT=20] -->
    <string name="settings_earthquake_limit_label">Earthquakes to show</string>
    <string name="settings_earthquake_limit_key" translatable="false">earthquake_limit</string>
    <string name="settings_earthquake_limit_default" translatable="false">20</string>

    <!-- Strings For Minimum Magnitude Preference [CHAR LIMIT=30] -->
    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">6</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_most_recent_value</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>

    <!-- Strings for filter-time-period option -->
    <string name="settings_filter_time_period_label">Period of time</string>
    <string name="settings_filter_time_period_key" translatable="false">time_period</string>
    <string name="settings_filter_time_period_default">@string/settings_filter_time_period_1_month_value</string>
    <string name="settings_filter_time_period_1_month">2 Month</string>
    <string name="settings_filter_time_period_1_month_value">2</string>
    <string name="settings_filter_time_period_3_months">4 Months</string>
    <string name="settings_filter_time_period_3_months_value">4</string>
    <string name="settings_filter_time_period_6_months">6 Months</string>
    <string name="settings_filter_time_period_6_months_value">6</string>
    <string name="settings_filter_time_period_1_year">1 Year</string>
    <string name="settings_filter_time_period_1_year_value">12</string>
    <string name="settings_filter_time_period_2_years">2 Years</string>
    <string name="settings_filter_time_period_2_years_value">24</string>

    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Earthquake Settings</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <string name="of_separator">" of "</string>

    <!-- Settings toolbar -->
    <string name="action_settings">Settings</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_earthquakes">No earthquakes</string>

    <!-- Error Messages -->
    <string name="error_no_data_found">No results</string>
    <string name="error_no_connection_to_server">Cannot connect to server</string>
    <string name="error_try_later">Try later</string>
    <string name="click_to_retry">Click to retry</string>

</resources>
