<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <PreferenceCategory
        android:title="@string/settings_category_limits">

        <EditTextPreference
            android:defaultValue="@string/settings_earthquake_limit_default"
            android:inputType="number"
            android:key="@string/settings_earthquake_limit_key"
            android:title="@string/settings_earthquake_limit_label" />

        <ListPreference
            android:key="@string/settings_filter_time_period_key"
            android:title="@string/settings_filter_time_period_label"
            android:entries="@array/settings_filter_time_period_entries"
            android:entryValues="@array/settings_filter_time_period_values"
            android:defaultValue="@string/settings_filter_time_period_1_month_value" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_order">

        <ListPreference
            android:key="@string/settings_order_by_key"
            android:title="@string/settings_order_by_label"
            android:entries="@array/settings_order_by_labels"
            android:entryValues="@array/settings_order_by_values"
            android:defaultValue="@string/settings_order_by_default" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_magnitude">

        <EditTextPreference
            android:defaultValue="@string/settings_min_magnitude_default"
            android:inputType="number"
            android:key="@string/settings_min_magnitude_key"
            android:title="@string/settings_min_magnitude_label" />

    </PreferenceCategory>

</PreferenceScreen>